// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button component should render correctly outline button 1`] = `
<div>
  <button
    class="button outline null"
    type="button"
  >
    Button component
  </button>
</div>
`;

exports[`Button component should render correctly primary button 1`] = `
<div>
  <button
    class="button primary null"
    type="button"
  >
    Button component
  </button>
</div>
`;

exports[`Button component should render correctly secondary button 1`] = `
<div>
  <button
    class="button secondary null"
    type="button"
  >
    Button component
  </button>
</div>
`;

exports[`Button component should render correctly small outline button 1`] = `
<div>
  <button
    class="button outline small"
    type="button"
  >
    Button component
  </button>
</div>
`;

exports[`Button component should render correctly small primary button 1`] = `
<div>
  <button
    class="button primary small"
    type="button"
  >
    Button component
  </button>
</div>
`;

exports[`Button component should render correctly small secondary button 1`] = `
<div>
  <button
    class="button secondary small"
    type="button"
  >
    Button component
  </button>
</div>
`;

exports[`Button component should render correctly xsmall outline button 1`] = `
<div>
  <button
    class="button outline xsmall"
    type="button"
  >
    Button component
  </button>
</div>
`;

exports[`Button component should render correctly xsmall primary button 1`] = `
<div>
  <button
    class="button primary xsmall"
    type="button"
  >
    Button component
  </button>
</div>
`;

exports[`Button component should render correctly xsmall secondary button 1`] = `
<div>
  <button
    class="button secondary xsmall"
    type="button"
  >
    Button component
  </button>
</div>
`;
